--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@moralisweb3/common-evm-utils": "^2.11.0",
     "@next/font": "13.1.1",
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@types/node": "18.11.18",
@@ -21,6 +22,7 @@
     "eslint-config-next": "13.1.1",
     "ethers": "^5.7.2",
     "framer-motion": "^8.2.4",
+    "moralis": "^2.11.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
