--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://luiscfaria.github.io/erc721-staking-frontend",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
